force-app/main/default/objects/Job__c/fields/Last_Date_to_Apply__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_to_Apply__c</fullName>
    <label>Last Date to Apply</label>
    <type>DateTime</type>
</CustomField>