force-app/main/default/objects/Job__c/fields/Min_10th_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Min_10th_Percentage__c</fullName>
    <label>Minimum 10th Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>