force-app/main/default/objects/Job__c/fields/Min_12th_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Min_12th_Percentage__c</fullName>
    <label>Minimum 12th Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>