force-app/main/default/objects/Job__c/fields/Salary_Range__c.field-meta.xml
<CustomField>
    <fullName>Salary_Range__c</fullName>
    <label>Salary Range</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>